# ChangeLog for dev-ruby/templater
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Nov 2008; Alex Legler <gentoo@a3li.info> +templater-0.5.0.ebuild:
  Initial commit, thanks to Cyril Mougel <cyril.mougel@gmail.com>.
