@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST templater-0.5.0.gem 31744 RMD160 4a4ea27f204527ecb1bf41f7c4d60fbd2e57c7fb SHA1 f3650f650339abea543a814f03f898e81de3e4d4 SHA256 7b04ec4ee0701ea24063c8167aadb320a030a48205d183238e232b35c565585f
+DIST templater-1.0.0.gem 32256 RMD160 a2963e7e9da0d11cf851a5f484cfab4500c6103c SHA1 0b2e19f9ac3fb6e4d9fbfcb437c552e5b158604b SHA256 57dec5528a7f4874dea3b7fd85c6b8c0be704ed432d8555c11adb8172e193d5f
 EBUILD templater-0.5.0.ebuild 392 RMD160 e4249b425cb28492a5c99a40f0cf25b60a928e53 SHA1 d83192ae4ebf652053ac2565e8881e3bc08ced4f SHA256 adb6a07580ace33296cc333016c1a779f19ab56e71126fa0c235af408351d90a
-MISC ChangeLog 258 RMD160 2f9d38eb23dc50c422b82c285cafbcaae449eccb SHA1 5cc1cc8f095cb4f712c577b30fa0c4f8086c1fe0 SHA256 fb9e20082c1a85c1827302db55a1f3fff6467dbcb24bb2578dd2065c681a9456
+EBUILD templater-1.0.0.ebuild 807 RMD160 4e0655bc7a34785fa53728ef770342c91406d90b SHA1 784729bf37ae4f4ea1bc92c0776f3921e61931d3 SHA256 b7047a1cb49102a51dec03cb864346892c3678cc684a0404503f6e0068a296a0
+MISC ChangeLog 399 RMD160 23122530de937033c7ca074a26ab8a7ea0a4ebe1 SHA1 67d9dd46af610868a6513d0e12dfd6dae67a2eff SHA256 93a402b0254ba11f3f1b7be54bf8bb52c476e3fcfb7ac2d2b51b644441b90807
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAkz3tlgACgkQZihJkut28SthuAEAtplGpKa3ujJzc1Bohst6a0XA
+XI/JOCdz095gBYP3a7QA/0En9TuVoNBN9K97otM8VWCngRW+a3HxEzPRYwo6qk+s
+=V/3H
+-----END PGP SIGNATURE-----
