@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/templater
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*templater-1.0.0 (02 Dec 2010)
+
+  02 Dec 2010; Hans de Graaff <graaff@gentoo.org> +templater-1.0.0.ebuild:
+  Move here from graaff overlay.
 
   30 Nov 2008; Alex Legler <gentoo@a3li.info> +templater-0.5.0.ebuild:
   Initial commit, thanks to Cyril Mougel <cyril.mougel@gmail.com>.
